fix iphone has scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,6 +21,9 @@
   div {
     scrollbar-width: none;
   }
+  div::-webkit-scrollbar {
+    display: none;
+  }
 }
 @media only screen and (min-width: 645px) {
   div {
